syntax = "proto3";
package helloworld;

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
    string image_mac = 1;
    bytes pubkey = 2;
    bytes quote = 3;
}

message HelloReply {
    bytes encrypted_key = 1;
}